add comments to organize page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- sezione iniziale, titolo e foto -->
+
     <h1>Il mio viaggio a Londra</h1>
 
     <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
@@ -13,5 +15,13 @@
     <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
 
     <hr>
+
+    <!-- tabella di spese -->
+
+    <!-- lista di cose da fare -->
+
+    <!-- sezione info -->
+
+    <!-- foto finali -->
 </body>
 </html>
