--- a/index.html
+++ b/index.html
@@ -18,6 +18,42 @@
 
     <!-- tabella di spese -->
 
+    <h2>Le mie spese</h2>
+
+    <table>
+        <tr>
+            <th>Numero</th>
+            <th>Descrizione</th>
+            <th>Costo</th>
+        </tr>
+        
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120€</td>
+        </tr>
+
+        <tr>
+            <th>Totale</th>
+            <th></th>
+            <th>360€</th>
+        </tr>
+    </table>
+
+    <hr>
+
     <!-- lista di cose da fare -->
 
     <!-- sezione info -->
