--- a/index.html
+++ b/index.html
@@ -56,8 +56,21 @@
 
     <!-- lista di cose da fare -->
 
+    <h2>Cose da fare</h2>
+
+    <ul>
+        <li>Visitare la Tower of London &#x2718</li>
+        <li>Visitare Greenwich &#10003</li>
+        <li>Ascoltare un artista di strada a Covent Garden &#10003</li>
+        <li>Mangiare il tipo Fish and Chips inglese &#x2718</li>
+    </ul>
+
     <!-- sezione info -->
+    
+    <h2>Info utili</h2>
 
     <!-- foto finali -->
+
+    <h2>Le foto</h2>
 </body>
 </html>
